<resources>
    <string name="app_name">ATM Consultoria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">atmconsultoria@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="principal">Principal</string>
    <string name="servi_os">Serviços</string>
    <string name="clientes">Clientes</string>
    <string name="comunica_o">Comunicação</string>
    <string name="contato">Contato</string>
    <string name="sobre">Sobre</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sistema_de_gest_o_da_qualidade">Sistema de Gestão da Qualidade</string>
</resources>
