<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/ic_inbox_black_24dp"
            android:title="@string/principal" />
        <item
            android:id="@+id/nav_servicos"
            android:icon="@drawable/ic_servicos_24dp"
            android:title="@string/servi_os" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/ic_clientes_24dp"
            android:title="@string/clientes" />
    </group>

    <item android:title="@string/comunica_o">
        <menu>
            <item
                android:id="@+id/nav_contato"
                android:icon="@drawable/ic_contato_24dp"
                android:title="@string/contato" />
            <item
                android:id="@+id/nav_sobre"
                android:icon="@drawable/ic_sobre_24dp"
                android:title="@string/sobre" />
        </menu>
    </item>

</menu>
